styles/style.css
/* ... */
html {
  scroll-behavior: smooth;
  font-family: "Inter", sans-serif;
  font-size: clamp(14px, 2vw, 18px);
  font-weight: 500;
  color: #212529;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
}

.container {
  font-size: 18px;
  margin: 0 auto;
  padding-right: 24px;
  padding-left: 24px;
  max-width: 1320px;
}

/* ======================== COOKIES ============================= */

.cookies_banner {
  display: flex;
  justify-content: space-between;
  padding: 20px 32px;
  background-color: #fff;
  -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
  -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
  width: 100%;
  position: fixed;
  bottom: 15px;
  left: 0;
  row-gap: 26px;
  column-gap: 22px;
  z-index: 3;
}

.cookies_info {
  display: flex;
  flex-direction: column;
  max-width: 1024px;
}

.cookies_info > h4 {
  font-size: 0.94rem;
  font-weight: 600;
}

.cookies_info > p {
  font-size: 0.66rem;
  line-height: 1.7;
}

.cookie_policy {
  font-size: 0.67rem;
  font-weight: 700;
}

.cookies_settings {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 17px;
  width: 100%;
}

.cookies_settings > button {
  background-color: #324fbe;
  color: #fff;
  padding: 14px 35px;
  border: none;
  border-radius: 2px;
  cursor: pointer;
  font-weight: 600;
  white-space: nowrap;
}

.cookies_settings > a {
  color: #324fbe;
  font-weight: 600;
  font-size: 12px;
  text-decoration: underline;
}

/* ========================== End of COOKIES ============================= */

/* ============================ HEADER ========================== */

.header {
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  background-color: #323232;
  color: #fff;
  width: 100%;
  justify-content: end;
  align-items: center;
  gap: clamp(20px, 6vw, 40px);
  font-size: clamp(8px, 2vw, 14px);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  z-index: 2;
}

.header-btn {
  background-color: #ff3c00;
  color: #fff;
  border: none;
  padding: 20px 40px;
  font-size: clamp(8px, 2vw, 14px);
  text-transform: uppercase;
  cursor: pointer;
}

/* ========================== End of HEADER ========================== */

/* ========================== HERO Section ========================== */

.hero {
  background-color: #eaeaea;
  background-image: url("../assets/images/bg-intro-image.png");
  background-repeat: no-repeat;
  background-size: cover;
  padding-top: 14.5%;
  padding-bottom: 232px;
  justify-content: center;
  align-items: center;
  font-weight: 500;
  line-height: 33px;
  transition: background-position 0.1s ease-out;
}

.hero-title {
  font-size: clamp(34px, 6vw, 77px);
  text-transform: uppercase;
  line-height: 1;
  font-weight: 900;
  text-transform: uppercase;
  margin-bottom: 53px;
}

.hero-description {
  font-size: clamp(19px, 2vw, 20px);
  line-height: 1.7;
  max-width: 816px;
  flex: 1 1 60%;
}

.hero-description p:first-child {
  margin-bottom: 26px;
}

.hero-container {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  align-items: flex-start;
  gap: 0px clamp(20px, 6vw, 85px);
}

/* Logo */

.circle-container {
  position: relative;
  width: clamp(162px, 18vw, 348px);
  height: clamp(162px, 18vw, 348px);
  bottom: 50px;
  flex: 0 0 auto;
}

.logo {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 46%;
  height: auto;
}

.logo img {
  width: 100%;
  height: 100%;
}

.rotating-text {
  width: 100%;
  height: 100%;
  animation: rotate 45s linear infinite;
  transform-origin: center;
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

text {
  font-family: sans-serif;
  font-size: 22px;
  fill: #111;
}

.bold {
  font-weight: 800;
  font-size: 22px;
}

/* End Logo */

.button {
  line-height: 1.1;
  letter-spacing: 1.4px;
  display: inline-block;
  text-decoration: none;
  text-transform: uppercase;
  background-color: #212529;
  color: #fff;
  font-weight: 800;
}

.hero-btn {
  font-size: 19.5px;
  padding: 22.1px 36.1px;
  margin-top: 57px;
  transition: all 0.15s ease-in-out;
}

.hero-btn:hover {
  background-color: #5b5b5b;
}

/* ========================== End of HERO ========================== */

/* ========================== OUR SPEAKERS ========================== */

.speakers {
  background-color: #eaeaea;
  padding-bottom: 304px;
}

.bg-wrapper {
  background-color: #fff;
}

.cta-container {
  position: relative;
  padding-top: 260px;
  padding-bottom: 8px;
}

.cta-block {
  position: absolute;
  left: 15px;
  right: 15px;
  display: flex;
  justify-content: space-between;
  padding: 47.5px 80px;
  border-radius: 16px;
  align-items: center;
  gap: clamp(15px, 2vw, 10px);
  top: -96px;
  background: radial-gradient(circle at top left, #f8d57e, transparent 3%),
    radial-gradient(circle at top right, #f8d57e, transparent 5%),
    linear-gradient(to top left, #8f73f0, #8f73f0 83%, #f8d57e 100%);
}

.cta-title {
  color: #fff;
  font-size: clamp(30px, 3vw, 47px);
  font-weight: 900;
  line-height: 1.06;
  text-transform: uppercase;
  max-width: 589px;
}

.cta-btn {
  font-size: clamp(20px, 3vw, 22px);
  line-height: 1.6;
  padding: 24px 49px;
  text-align: center;
  white-space: nowrap;
  transition: all 0.15s ease-in-out;
}

.cta-btn:hover {
  background-color: #5b5b5b;
}

.section-title {
  color: #212529;
  text-align: center;
  font-size: clamp(35px, 6vw, 59px);
  font-weight: 900;
  line-height: 1;
  text-transform: uppercase;
}

.speakers-container {
  padding-top: 80px;
}

.speakers-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  row-gap: 138px;
}

.speaker-items {
  text-align: center;
  width: calc(33.333% - 1.333rem);
}

.speaker-items:nth-child(3n + 2) {
  transform: translateY(75px);
}
/* ... */

